Cambios formulario Se realizan cambios visuales al formulario, tambien se agrega javascript para manejar alertas. Se realizan cambios menores en sebastian.html y style.css sobre imagen de perfil

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,12 @@ h2{
 label{
     color: wheat;
 }
+
+#imgPerfil{
+	min-width: 100px;
+	min-height: 100px;
+}
+
+#btn-contact{
+	background-color: black !important;
+}
