--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
 	justify-content: left;
 }
 
+body{ background-image: url(../resources/cool-background.png);
+	background-size: 100% 100%;
+}
 
 @media only screen and (max-width: 600px){
 	.contenedorh2{ 
