--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,24 @@ footer {
 	width: 100%;
 	height: 2.5rem;            /* Footer height */
   }
+
+a:hover {
+	 color: rgb(255, 251, 0) !important;
+	 text-shadow: 0px 0px 4px #fff !important;
+	 background-color: rgb(9, 8, 119) !important;
+	}
+
+.dropdown-item{
+	background-color: rgb(9, 8, 140) !important;
+	color: rgb(255, 255, 255);
+}
+
+.dropdown-menu{
+	background-color: rgb(9, 8, 140) !important;
+}
+
+a:focus {
+	color: rgb(255, 251, 0) !important;
+	 text-shadow: 0px 0px 4px #fff !important;
+	 background-color: rgb(9, 8, 119) !important;
+}
